# videoplayer

VideoPlayer - Copy (2)/: CMakeLists.txt  main.cpp
VideoPlayer - Copy (2)/core/: audio_output.cpp  audio_output.h  decoder.cpp  decoder.h  player.cpp  player.h  renderer.cpp  renderer.h  subtitle_manager.cpp  subtitle_manager.h  sync.cpp  sync.h
VideoPlayer - Copy (2)/ui/: controls.cpp  controls.h  gui.cpp  gui.h
VideoPlayer - Copy (2)/utils/: config.cpp  config.h  logger.cpp  logger.h  timer.cpp  timer.h
